--- a/templates/menu.html
+++ b/templates/menu.html
@@ -8,7 +8,7 @@
 {% for i in items %}
 
 <div>
-
+<a href={{url_for("newMenuItem", restaurant_id = restaurant.id)}}>Create a new menu item.</a><br>
 <p>{{i.name}}</p>
 
 <p>{{i.description}}</p>
